--- a/share-file/playbook/7-nginx-playbook.yml
+++ b/share-file/playbook/7-nginx-playbook.yml
@@ -159,6 +159,19 @@
               }
           }
 
+    - name: insert gzip config
+      blockinfile:
+        path: /etc/nginx/nginx.conf
+        marker: " "
+        insertafter: "^http {"
+        block: |
+          gzip on;
+          gzip_buffers 8 16k;
+          gzip_min_length 512;
+          gzip_disable "MSIE [1-6]\.(?!.*SV1)";
+          gzip_http_version 1.1;
+          gzip_types   text/plain text/css application/javascript application/x-javascript application/json application/xml;
+
     - name: enable nginx
       shell: "{{ item }}"
       with_items:
